--- a/packages/build-ui/package.json
+++ b/packages/build-ui/package.json
@@ -9,7 +9,8 @@
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -50,6 +51,8 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "rollup": "^2.45.2",
-    "rollup-plugin-terser": "^7.0.2"
-  }
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.2.4"
+  },
+  "types": "./types/index.d.ts"
 }
