--- a/packages/build-ui/package.json
+++ b/packages/build-ui/package.json
@@ -13,8 +13,11 @@
     "types"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx rollup --config rollup.config.js"
+    "build": "npx rollup --config rollup.config.js",
+    "test": "npx jest --config=\"./jest.config.js\"",
+    "test:watch": "npm run test -- --watch-all",
+    "test:coverage": "npm run test -- --coverage=true",
+    "lint": "npx eslint \"./src\""
   },
   "keywords": [
     "react",
@@ -47,9 +50,19 @@
     "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.22",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
+    "eslint-plugin-jest-dom": "^3.8.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^4.1.1",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.45.2",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.2.4"
