--- a/packages/build-ui/tsconfig.json
+++ b/packages/build-ui/tsconfig.json
@@ -3,7 +3,8 @@
     "include": [
         "src/components/**/*",
         "src/hooks/**/*",
-        "src/utils/**/*"
+        "src/utils/**/*",
+        "src/tests/**/*"
     ],
     "compilerOptions": {
       // Tells TypeScript to read JS files, as
