--- a/packages/build-ui/package.json
+++ b/packages/build-ui/package.json
@@ -46,13 +46,15 @@
     "@babel/core": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
-    "@types/jest": "^26.0.22",
+    "@testing-library/react-hooks": "^5.1.2",
+    "@types/jest": "^26.0.23",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "eslint-plugin-jest-dom": "^3.8.1",
