--- a/packages/build-ui/package.json
+++ b/packages/build-ui/package.json
@@ -53,6 +53,7 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.2",
     "@types/jest": "^26.0.23",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
