Added src index to types at type compilation

--- a/packages/build-ui/tsconfig.json
+++ b/packages/build-ui/tsconfig.json
@@ -4,7 +4,8 @@
         "src/components/**/*",
         "src/hooks/**/*",
         "src/utils/**/*",
-        "src/tests/**/*"
+        "src/tests/**/*",
+        "src/index.js"
     ],
     "compilerOptions": {
       // Tells TypeScript to read JS files, as
