--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,7 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
+    "deploy:ghpages": "cmd /C \"set GIT_USER=LuisMPS&& npm run deploy\"",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
