--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@reduxjs/toolkit": "^1.5.0",
     "build-ui": "0.1.0-alpha.6",
     "clsx": "^1.1.1",
     "immer": "^8.0.1",
-    "next": "10.0.8",
+    "next": "^10.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2"
