--- a/packages/build-ui/package.json
+++ b/packages/build-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "build-ui",
-  "version": "0.1.0-alpha.13",
+  "version": "0.1.0-alpha.14",
   "description": "Code your own site builders with React",
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "build-ui": "file:",
     "immer": "^9.0.1",
     "lodash": "^4.17.21",
     "react-redux": "^7.2.3",
